--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <button id="btnMostrar" class="btn btn-success mx-2">Mostrar Imagen</button>
 
         <div class="image-container">
-            <img id="imagen" src="https://static.wikia.nocookie.net/featteca/images/9/98/Shrek.png/revision/latest?cb=20220713043820&path-prefix=es" class="img-fluid mt-4" alt="Imagen Placeholder">
+            <img id="imagen" src="shrek.png" class="img-fluid mt-4" alt="Imagen Placeholder">
         </div>
     </div>
 
